--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/material-bottom-tabs": "^6.2.16",
+    "@react-navigation/native": "^6.1.7",
+    "axios": "^1.3.4",
     "expo": "^49.0.3",
     "expo-constants": "~14.4.2",
     "expo-font": "^11.4.0",
